force-app/main/default/objects/ASF_Quick_Link_Config__mdt/ASF_Quick_Link_Config__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata is used to store the Child Configuration related to Quick Kill in ASF_ButtonCard_Confg</description>
    <label>ASF_Quick_Link_Config</label>
    <pluralLabel>ASF_Quick_Link_Configs</pluralLabel>
</CustomObject>