force-app/main/default/objects/ASF_Quick_Link_Config__mdt/fields/ASF_ButtonCardConfig__c.field-meta.xml
<CustomField>
    <fullName>ASF_ButtonCardConfig__c</fullName>
    <label>ASF_ButtonCardConfig</label>
    <referenceTo>ASF_ButtonCardConfig__mdt</referenceTo>
    <relationshipLabel>ASF_Quick_Link_Configs</relationshipLabel>
    <relationshipName>ASF_Quick_Link_Configs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>