force-app/main/default/objects/ASF_Quick_Link_Config__mdt/fields/FunctionCode__c.field-meta.xml
<CustomField>
    <fullName>FunctionCode__c</fullName>
    <label>FunctionCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>