force-app/main/default/objects/ASF_Quick_Link_Config__mdt/fields/FunctionName__c.field-meta.xml
<CustomField>
    <fullName>FunctionName__c</fullName>
    <label>FunctionName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>