force-app/main/default/objects/ASF_Quick_Link_Config__mdt/fields/SMSMetadataName__c.field-meta.xml
<CustomField>
    <fullName>SMSMetadataName__c</fullName>
    <label>SMSMetadataName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>